------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.13.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.13.rst'

* Fix matching ``--notes`` options that end in a non-word character.

  Closes #5840

* ``using-f-string-in-unsupported-version`` and ``using-final-decorator-in-unsupported-version`` msgids
    were renamed from ``W1601`` and ``W1602`` to ``W2601`` and ``W2602``. Disabling using these msgids will break.
    This is done in order to restore consistency with the already existing msgids for ``apply-builtin`` and
    ``basestring-builtin`` from the now deleted python 3K+ checker. There is now a check that we're not using
    existing msgids or symbols from deleted checkers.

  Closes #5729

* Add ``--recursive`` option to allow recursive discovery of all modules and packages in subtree. Running pylint with
  ``--recursive=y`` option will check all discovered ``.py`` files and packages found inside subtree of directory provided
  as parameter to pylint.

  Closes #352

* Add ``modified-iterating-list``, ``modified-iterating-dict`` and ``modified-iterating-set``,
  emitted when items are added to or removed from respectively a list, dictionary or
  set being iterated through.

  Closes #5348

* Fix false-negative for ``assignment-from-none`` checker using list.sort() method.

  closes #5722

* Fixed crash from ``arguments-differ`` and ``arguments-renamed`` when methods were
  defined outside the top level of a class.

  Closes #5648

* Removed the deprecated ``check_docs`` extension. You can use the ``docparams`` checker
  to get the checks previously included in ``check_docs``.

  Closes #5322

* Added a ``testutil`` extra require to the packaging, as ``gitpython`` should not be a dependency
  all the time but is still required to use the primer helper code in ``pylint.testutil``. You can
  install it with ``pip install pylint[testutil]``.

  Closes #5486
