@@ -35,6 +35,8 @@
             relation
             relation2
             top : str
+            from_value(value: int)
+            transform_value(value: int) -> int
           }
           Specialization --|> Ancestor
           Ancestor ..|> Interface
