@@ -30,6 +30,8 @@ classDiagram
     relation
     relation2
     top : str
+    from_value(value: int)
+    transform_value(value: int) -> int
   }
   Specialization --|> Ancestor
   Ancestor ..|> Interface
